--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "electron": "^32.1.2"
+    "electron": "^32.1.2",
+    "node-adodb": "^5.0.3"
   }
 }
