--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "electron": "^32.1.2",
+    "mysql2": "^3.11.3",
     "node-adodb": "^5.0.3"
   }
 }
