--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pack": "electron-packager . --platform=win32 --arch=x64 --out=dist/ --icon=book.ico"
   },
   "author": "Carlos Camacho",
   "license": "ISC",
@@ -12,7 +13,11 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "electron": "^32.1.2",
+    "html2pdf.js": "^0.10.2",
     "mysql2": "^3.11.3",
     "node-adodb": "^5.0.3"
+  },
+  "devDependencies": {
+    "electron-packager": "^17.1.2"
   }
 }
